# trade-bot

./: .env.example  .gitignore  Dockerfile  README.md  README.txt  apply_v26_1_updates.py  apply_v26_updates.py  apply_v27_2_gap_safe_strategy_update.py  apply_v27_3_coverage_aware_split_update.py  apply_v27_order_book_strategy_update.py  apply_v28_order_book_gated_strategy_update.py  apply_v29_1_candle_price_timeline_update.py  apply_v29_multitimeframe_pullback_update.py  apply_v30_1_order_book_alignment_audit.py  apply_v30_order_book_delta_update.py  docker-compose.yml  pyproject.toml  taskV25.1.1.txt
.claude/: settings.local.json
app/: main.py
docs/: architecture.md  execution-flow.md  risk-management.md  strategy-design.md  v31_1_diagnostic_protocol.md  v31_research_protocol.md
reports/: feature_analysis_latest.json  feature_analysis_v26.json  feature_analysis_v26_after_commit.json  feature_candidates_latest.json  feature_candidates_v26_1.json  feature_group_comparison_latest.json  feature_group_comparison_v26.json  feature_group_comparison_v26_1.json  feature_group_comparison_v26_after_commit.json  multitimeframe_pullback_delta_strategy_v30.json  multitimeframe_pullback_strategy_v29.json  multitimeframe_pullback_strategy_v29_1.json  order_book_alignment_v30_1.json  order_book_alignment_v30_1_refresh.json  order_book_feature_analysis_3h.json  order_book_gated_strategy_v28.json  order_book_strategy_v27.csv  order_book_strategy_v27.json  order_book_strategy_v27_15m.json  order_book_strategy_v27_1m.json  order_book_strategy_v27_3.json  order_book_strategy_v27_5m.json  (+2 more)
(+133 files in other folders)
