[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Local-first crypto trading bot MVP with paper/testnet architecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0,<16.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.1.0,<26.0.0",
    "orjson>=3.10.0,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[tool.setuptools]
packages = [
    "app",
    "app.config",
    "app.exchange",
    "app.market",
    "app.strategy",
    "app.risk",
    "app.execution",
    "app.storage",
    "app.backtesting",
    "app.monitoring",
    "app.utils",
    "scripts",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
